[package]
name = "data_structure_marcos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.47"
data_structures = {path = "../data_structures"}

[lib]
proc-macro = true

[[test]]
name = "intergration_testing"
path = "tests/mod.rs"

